Changed Name of YAML

--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -17,7 +17,7 @@ steps:
   args:
   - '-c'
   - |
-    tf_utils.sh apply infra_build ${PROJECT} ${_COMPOSER_LOCATION} ${PROJECT}
+    tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
