--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -16,7 +16,7 @@ steps:
   entrypoint: 'sh'
   args:
   - |
-    tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}
+    /workspace/tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
