--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -13,7 +13,7 @@ steps:
 - id: 'setup-repos'
   name: 'hashicorp/terraform:1.2.4'
   waitFor: ['-']
-  entrypoint: 'ls -l'
+  entrypoint: 'pwd'
 
 
 - id: 'build-test-container'
