Changed Name of YAML

--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -16,7 +16,8 @@ steps:
   entrypoint: 'sh'
   args:
     - '-c'
-    - | "/workspace/tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}"
+    - | 
+      "/workspace/tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}"
 
 
 - id: 'build-test-container'
