--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -13,11 +13,7 @@ steps:
 - id: 'setup-repos'
   name: 'hashicorp/terraform:1.2.4'
   waitFor: ['-']
-  entrypoint: 'pwd'
-  args:
-    - '&&'
-    - | 
-      sh /workspace/tf_utils.sh apply infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}
+  args: [ 'sh', '/workspace/tf_utils.sh','plan','infra_build','${PROJECT_ID}' ,'${_COMPOSER_LOCATION}', '${PROJECT_ID}']
 
 
 - id: 'build-test-container'
