--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -14,7 +14,7 @@ steps:
   name: 'hashicorp/terraform:1.2.4'
   waitFor: ['-']
   entrypoint: 'sh'
-  args: [ '-c', '"/workspace/tf_utils.sh plan infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}"']
+  args: [ '-c', '"./tf_utils.sh plan infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}"']
 
 
 - id: 'build-test-container'
