--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -13,9 +13,20 @@ steps:
 - id: 'setup-repos'
   name: 'hashicorp/terraform:1.2.4'
   waitFor: ['-']
+  dir: './infra_build'
   entrypoint: 'sh'
-  args: [ '-c', '"./tf_utils.sh plan infra_build ${PROJECT_ID} ${_COMPOSER_LOCATION} ${PROJECT_ID}"']
-
+  args:
+  - '-c'
+  - |
+    sed -i s/PROJECT_ID/$PROJECT_ID/g backend.tf
+    sed -i s/PROJECT_ID/$PROJECT_ID/g terraform.tfvars
+    sed -i s/PROJECT_ID/$PROJECT_ID/g provider.tf
+    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g backend.tf
+    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g terraform.tfvars
+    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g provider.tf
+    terraform init
+    terraform workspace select $PROJECT_ID || terraform workspace new $PROJECT_ID
+    terraform apply --auto-approve
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
