Removed Redundant Code

--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -13,7 +13,7 @@ steps:
 - id: 'make-env-substitutions'
   name: 'ubuntu'
   waitFor: ['-']
-  args: ['bash', './env_subst.sh','apply', 'infra_build', '$PROJECT_ID', '${_COMPOSER_LOCATION}', '$PROJECT_ID']
+  args: ['bash', './env_subst.sh','apply', '/workspace/infra_build', '$PROJECT_ID', '${_COMPOSER_LOCATION}', '$PROJECT_ID']
 
 - id: 'setup-repos'
   name: 'hashicorp/terraform:1.2.4'
@@ -23,12 +23,6 @@ steps:
   args:
   - '-c'
   - |
-    sed -i s/PROJECT_ID/$PROJECT_ID/g backend.tf
-    sed -i s/PROJECT_ID/$PROJECT_ID/g terraform.tfvars
-    sed -i s/PROJECT_ID/$PROJECT_ID/g provider.tf
-    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g backend.tf
-    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g terraform.tfvars
-    sed -i s/LOCATION_ID/${_COMPOSER_LOCATION}/g provider.tf
     terraform init
     terraform workspace select $PROJECT_ID || terraform workspace new $PROJECT_ID
     terraform apply --auto-approve
