--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -35,8 +35,8 @@ steps:
   - '-c'
   - |
     dag_bucket=$(gcloud composer environments describe $PROJECT_ID --location ${_COMPOSER_LOCATION}|grep dagGcsPrefix|cut -d ":" -f2-3|sed 's/\/dags//g')
-    echo "BUCKET=$bucket"  
-    gsutil rsync -r -d dags/ ${dag_buckets}/data/${SHORT_SHA}/
+    echo "BUCKET=${dag_bucket}"  
+    gsutil rsync -r -d dags/ ${dag_bucket}/data/${SHORT_SHA}/
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
