--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -56,10 +56,10 @@ steps:
     gsutil rsync -r -d dags/ ${dag_bucket}/data/${SHORT_SHA}/
     gcloud composer environments run ${_COMPOSER_ENV} --location ${_COMPOSER_LOCATION} dags list -- --subdir /home/airflow/gcs/data/${SHORT_SHA}/
     gsutil rm -rf ${dag_bucket}/data/${SHORT_SHA}/
-    echo ${_MYDICT}
+    jq --version
+
 options:
     dynamic_substitutions: true
 substitutions:
   _COMPOSER_LOCATION: europe-west2
   _COMPOSER_ENV: ${PROJECT_ID}
-  _MYDICT : {"main":"prod","test":"test"}
