--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -25,7 +25,7 @@ steps:
   - |
     terraform init || exit 1
     terraform workspace select ${PROJECT_ID} || terraform workspace new ${PROJECT_ID}
-    terraform plan
+    terraform apply --auto-approve
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
