--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -6,16 +6,9 @@ steps:
   args:
     - '-c'
     - |
-      echo  echo "*****************************TEST DAGS**************************************************************************"
+      echo  echo "*****************************DAG CICD - BRANCH:$BRANCH_NAME*******************************************************"
       echo "HEAD BRANCH_NAME: $_HEAD_BRANCH -- BASE BRANCH_NAME:$_BASE_BRANCH -- SHORT_SHA - ${SHORT_SHA} PROJECT_ID: $PROJECT_ID"
       echo "***********************************************************************************************************************"
-      echo "BRANCH:$BRANCH_NAME"
-      jq --version
-
-- id: 'jq'
-  name: 'ubuntu'
-  waitFor: ['-']
-  args: ['jq', '--version']
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
@@ -35,17 +28,13 @@ steps:
       pytest /workspace/tests
 
 - id: 'run-int-tests'
-  name: gcr.io/cloud-builders/gcloud
+  name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
   waitFor: ['run-unit-test']
   entrypoint: 'sh'
   args:
   - '-c'
   - |
-    dag_bucket=$(gcloud composer environments describe $PROJECT_ID --location ${_COMPOSER_LOCATION}|grep dagGcsPrefix|cut -d ":" -f2-3|sed 's/\/dags//g')
-    echo "BUCKET=${dag_bucket}"  
-    gsutil rsync -r -d dags/ ${dag_bucket}/data/${SHORT_SHA}/
-    gcloud composer environments run ${_COMPOSER_ENV} --location ${_COMPOSER_LOCATION} dags list -- --subdir /home/airflow/gcs/data/${SHORT_SHA}/
-    gsutil rm -rf ${dag_bucket}/data/${SHORT_SHA}/
+    jq --version
 options:
     dynamic_substitutions: true
 substitutions:
