--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -29,22 +29,14 @@ steps:
 
 - id: 'run-int-test'
   name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
-  waitFor: ['-']
+  waitFor: ['build-test-container']
   entrypoint: 'sh'
   args:
     - '-c'
     - |
       echo ${BRANCH_NAME} ${COMMIT_SHA}
       project_to_branch_map=($(cat env_mapper.txt))
-      for mapping in ${project_to_branch_map[@]}; do
-        project_id=$(echo ${mapping}|cut -d":" -f1)
-        dag_bucket=$(echo ${mapping}|cut -d":" -f2)
-        branch=$(echo ${mapping}|cut -d":" -f3)
-        echo "Project_id=${project_id}, Branch=${branch}"
-        if [ ${BRANCH_NAME} == ${branch} ]; then
-          echo "Deploying to ${project_id}"
-        fi
-      done
+      echo ${project_to_branch_map}
 options:
     dynamic_substitutions: true
 substitutions:
