--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -35,7 +35,7 @@ steps:
     - '-c'
     - |
       echo ${BRANCH_NAME} ${COMMIT_SHA}
-      project_to_branch_map=($(cat env_mapper.txt))
+      project_to_branch_map="($(cat env_mapper.txt))"
       echo ${project_to_branch_map}
 options:
     dynamic_substitutions: true
