--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -37,6 +37,16 @@ steps:
       echo ${BRANCH_NAME} ${COMMIT_SHA}
       project_to_branch_map="($(cat env_mapper.txt))"
       echo ${project_to_branch_map}
+      for mapping in ${project_to_branch_map[@]}; do
+        project_id=$(echo ${mapping}|cut -d":" -f1)
+        dag_bucket=$(echo ${mapping}|cut -d":" -f2)
+        branch=$(echo ${mapping}|cut -d":" -f3)
+        echo "Project_id=${project_id}, Branch=${branch}"
+
+        if [ ${BRANCH_NAME} == ${branch} ]; then
+          echo "Deploying to ${project_id}"
+        fi
+      done
 options:
     dynamic_substitutions: true
 substitutions:
