--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -25,7 +25,7 @@ steps:
   args:
     - '-c'
     - |
-      pytest /workspace/tests
+      pytest /workspace/tests ${BRANCH_NAME} ${SHORT_SHA}
 
 - id: 'run-int-test'
   name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
@@ -33,6 +33,8 @@ steps:
   entrypoint: 'bash'
   args:
     - 'run_integration_tests.sh'
+    - $BRANCH_NAME
+    - $SHORT_SHA
 options:
     dynamic_substitutions: true
 substitutions:
