--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -25,16 +25,15 @@ steps:
   args:
     - '-c'
     - |
-      pytest /workspace/tests ${BRANCH_NAME} ${SHORT_SHA}
+      pytest /workspace/tests
 
 - id: 'run-int-test'
   name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
   waitFor: ['build-test-container']
   entrypoint: 'bash'
   args:
-    - 'run_integration_tests.sh'
-    - $BRANCH_NAME
-    - $SHORT_SHA
+    - |  
+      run_integration_tests.sh $BRANCH_NAME $SHORT_SHA
 options:
     dynamic_substitutions: true
 substitutions:
