--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -35,6 +35,7 @@ steps:
     - run_integration_tests.sh
     - $BRANCH_NAME
     - $SHORT_SHA
+    - $_COMPOSER_LOCATION
 options:
     dynamic_substitutions: true
 substitutions:
