--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,18 +10,17 @@ repos:
       - id: mixed-line-ending
         args:
           - --fix=lf
-  - repo: https://github.com/ambv/black
-    rev: 22.6.0
+  - repo: https://github.com/PyCQA/flake8
+    rev: 5.0.4
     hooks:
-      - id: black
-        language_version: python3.9
+      - id: flake8
+        args:
+          - "--max-line-length=160"
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.3.0
     hooks:
       - id: detect-secrets
-        args:
-          - --scan
-          | >.secrets.baseline
+        args: [ "--baseline", ".config/secrets.baseline" ]
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
     hooks:
