--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,10 @@ repos:
     rev: v1.3.0
     hooks:
       - id: detect-secrets
-        args: [ "--scan", ">",".secrets.baseline", "&&" "detect-secrets", "--baseline", ".secrets.baseline" ]
+        args:
+          - '--scan'
+          - |
+             > .secrets.baseline
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
     hooks:
