--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,9 +21,9 @@ repos:
     hooks:
       - id: detect-secrets
         args:
-          - '--scan'
+          - 'scan'
           - |
-             > .secrets.baseline
+             > /tmp/.secrets.baseline
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
     hooks:
