--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
         args:
           - 'scan'
           - |
-             > /tmp/.secrets.baseline
+             > /tmp/.secrets.baseline && detect-secrets scan --baseline /tmp/.secrets.baseline
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
     hooks:
