--- a/pre-merge.yaml
+++ b/pre-merge.yaml
@@ -1,7 +1,7 @@
 steps:
 - id: 'branch-name'
   name: 'alpine'
-  waitFor: ['-']
+  waitFor: [ '-' ]
   entrypoint: 'sh'
   args:
     - '-c'
@@ -12,15 +12,23 @@ steps:
 
 - id: 'build-test-container'
   name: 'gcr.io/kaniko-project/executor:latest'
-  waitFor: ['-']
+  waitFor: [ '-' ]
   args:
     - --destination=${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd
     - --cache=true
     - --cache-ttl=240h
 
+- id: 'pre-commit'
+  name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
+  waitFor: [ 'build-test-container' ]
+  args:
+    - pre-commit
+    - run
+    - --all-files
+
 - id: 'run-unit-test'
   name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
-  waitFor: ['build-test-container']
+  waitFor: [ 'build-test-container' ]
   entrypoint: 'sh'
   args:
     - '-c'
@@ -29,7 +37,7 @@ steps:
 
 - id: 'run-int-test'
   name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
-  waitFor: ['build-test-container']
+  waitFor: [ 'build-test-container' ]
   entrypoint: 'bash'
   args:
     - run_integration_tests.sh
@@ -37,7 +45,7 @@ steps:
     - $SHORT_SHA
     - $_COMPOSER_LOCATION
 options:
-    dynamic_substitutions: true
+  dynamic_substitutions: true
 substitutions:
   _COMPOSER_LOCATION: europe-west2
   _COMPOSER_ENV: ${PROJECT_ID}
