--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
           - 'scan'
           - |
              > /tmp/.secrets.baseline && detect-secrets scan --baseline /tmp/.secrets.baseline
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.1
-    hooks:
-      - id: markdownlint
+#  - repo: https://github.com/igorshubovych/markdownlint-cli
+#    rev: v0.32.1
+#    hooks:
+#      - id: markdownlint
