Stable from Schipol

--- a/env.config
+++ b/env.config
@@ -1,7 +1,7 @@
-TF_VAR_folder=<FOLDER>
-TF_VAR_billing_account=<TF_BILL_ACCT>
+TF_VAR_folder=?
+TF_VAR_billing_account=?
 TF_VAR_location=europe-west2
-TF_VAR_deployment_project=cicd-nazca-deploy
-TF_VAR_dev_project=cicd-nazca-dev
-TF_VAR_test_project=cicd-nazca-test
-TF_VAR_prod_project=cicd-nazca-prod
+TF_VAR_deployment_project=cicd-arequipa-deploy
+TF_VAR_dev_project=cicd-arequipa-dev
+TF_VAR_test_project=cicd-arequipa-test
+TF_VAR_prod_project=cicd-arequipa-prod
