--- a/cloudbuild/on-merge.yaml
+++ b/cloudbuild/on-merge.yaml
@@ -9,6 +9,14 @@ steps:
       echo  echo "*****************************DAG CICD - BRANCH:$BRANCH_NAME*******************************************************"
       echo "HEAD BRANCH_NAME: $_HEAD_BRANCH -- BASE BRANCH_NAME:$_BASE_BRANCH -- SHORT_SHA - ${SHORT_SHA} PROJECT_ID: $PROJECT_ID"
       echo "***********************************************************************************************************************"
+- id: 'deploy'
+  name: '${_COMPOSER_LOCATION}-docker.pkg.dev/${PROJECT_ID}/airflow-test-container/cicd:latest'
+  waitFor: [ '-' ]
+  entrypoint: 'sh'
+  args:
+  - '-c'
+  - |
+    chmod 411 ./cloudbuild/deploy_dags.sh && ./cloudbuild/deploy_dags.sh $BRANCH_NAME || exit 1
 options:
   dynamic_substitutions: true
 substitutions:
