--- a/cloudbuild/on-merge.yaml
+++ b/cloudbuild/on-merge.yaml
@@ -20,5 +20,5 @@ steps:
 options:
   dynamic_substitutions: true
 substitutions:
-  _COMPOSER_LOCATION: europe-west2
+  _COMPOSER_LOCATION: TF_VAR_location
   _COMPOSER_ENV: ${PROJECT_ID}
