--- a/config/env.config
+++ b/config/env.config
@@ -1,7 +1,7 @@
-TF_VAR_folder=411092246126
-TF_VAR_billing_account=017B39-5B5F1B-912B8C
-TF_VAR_location=europe-west2
-TF_VAR_deployment_project=cicd-arequipa-deploy
-TF_VAR_dev_project=cicd-arequipa-dev
-TF_VAR_test_project=cicd-arequipa-test
-TF_VAR_prod_project=cicd-arequipa-prod
+TF_VAR_folder=<CHANGE ME>
+TF_VAR_billing_account=<CHANGE ME>
+TF_VAR_location=<CHANGE ME>
+TF_VAR_deployment_project=<CHANGE ME>
+TF_VAR_dev_project=<CHANGE ME>
+TF_VAR_test_project=<CHANGE ME>
+TF_VAR_prod_project=<CHANGE ME>
