--- a/config/env.config
+++ b/config/env.config
@@ -1,7 +1,7 @@
-TF_VAR_folder=<CHANGE ME>
-TF_VAR_billing_account=<CHANGE ME>
-TF_VAR_location=<CHANGE ME>
-TF_VAR_deployment_project=<CHANGE ME>
-TF_VAR_dev_project=<CHANGE ME>
-TF_VAR_test_project=<CHANGE ME>
-TF_VAR_prod_project=<CHANGE ME>
+iiTF_VAR_folder=999999999
+TF_VAR_billing_account=samuel.ojagbohunmi@gmail.com
+TF_VAR_location=us-central1a
+TF_VAR_deployment_project=genial-broker-378301
+TF_VAR_dev_project=samuel-dev-project-917f1x
+TF_VAR_test_project=samuel-test-project-917f1x
+TF_VAR_prod_project=samuel-prod-project-917f1x
